# text-index

./: LICENSE  text-index.cabal
src/Data/Search/: Results.hs
src/Data/Text/: Index.hs  Index.hs.old
