name:                text-index
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  exposed-modules:
    Data.Text.Index
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >= 4.7 && < 4.8,
    psqueues >= 0.2 && < 0.3,
    text >= 1.2 && < 1.3,
    text-icu >= 0.7 && < 0.8,
    tst >= 0.1 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010