name:                text-index
version:             0.2.0.0
synopsis:            In-memory text indexing for fast searching
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:
    Data.Search.Results
    Data.Text.Index
  build-depends:
    base >= 4.7 && < 4.10
    , prose >= 0.0.1 && < 0.1
    , psqueues >= 0.2 && < 0.3
    , text >= 1.2 && < 1.3
    , tst >= 0.1 && < 0.2
    , unicode-properties >= 3.2.0.0 && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
